# ogdf

./: CMakeLists.txt  README.md  sonar-project.properties
.github/: prune-caches.sh
.github/workflows/: check-build-test.yml  sonar.yml
build-static-analysis/: CMakeCache.txt  CoinTargets.cmake  Makefile  OgdfTargets.cmake  cmake_install.cmake
build-static-analysis/include/ogdf/basic/internal/: config_autogen.h
cmake/: make-user-target.cmake  ogdf.cmake
coverage/: report.txt
include/ogdf/basic/: AdjEntryArray.h  Array.h  EdgeArray.h  FaceArray.h  GraphCopy.h  GraphList.h  Graph_d.h  Logger.h  NodeArray.h  PriorityQueue.h  exceptions.h  simple_graph_alg.h
include/ogdf/cluster/: ClusterArray.h  ClusterGraph.h  HananiTutteCPlanarity.h
include/ogdf/decomposition/: BCTree.h  DynamicBCTree.h  DynamicSPQRForest.h  PertinentGraph.h  SPQRTree.h
include/ogdf/fileformats/: GraphML.h  GraphMLParser.h
include/ogdf/graphalg/: MinSteinerTreeDirectedCut.h  Triconnectivity.h
include/ogdf/hypergraph/: Hypergraph.h  HypergraphArray.h
include/ogdf/lib/backward/: backward.hpp
include/ogdf/lib/pugixml/: pugiconfig.h  pugixml.h
src/ogdf/basic/: Graph.cpp  GraphCopy.cpp  Logger.cpp  System.cpp  precondition.cpp  simple_graph_alg.cpp
src/ogdf/basic/memory/: PoolMemoryAllocator.cpp
src/ogdf/cluster/: ClusterAnalysis.cpp  ClusterGraph.cpp  ClusterPlanarity.cpp  HananiTutteCPlanarity.cpp
src/ogdf/cluster/internal/: CPlanarityMaster.cpp
src/ogdf/decomposition/: BCTree.cpp  DynamicBCTree.cpp  DynamicSPQRForest.cpp  StaticSPQRTree.cpp
src/ogdf/fileformats/: GraphIO.cpp  GraphIO_graphml.cpp  GraphML.cpp  GraphMLParser.cpp
src/ogdf/graphalg/: Triconnectivity.cpp
src/ogdf/orthogonal/: OrthoLayout.cpp
src/ogdf/packing/: ComponentSplitterLayout.cpp
static-analysis/: all-headers.txt  all-sources.txt  clang-tidy.json  clang-tidy.txt  compile_commands.json  unused-headers.txt  used-headers.txt
util/: test_static_analysis.sh
util/style/: test_all.sh  test_clang_format.sh
